# vulkan_demo

./: CMakeLists.txt  CMakeSettings.json
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/: App.hpp  base.hpp  config.hpp  hash.hpp  system.hpp
include/render/: Frame.hpp  Mesh.hpp  MeshLoader.hpp  RenderSystem.hpp  Vertex.hpp
include/render/vulkan/: Buffer.hpp  DescriptorPoolCache.hpp  Image.hpp  Memory.hpp
src/: App.cpp  main.cpp  vertex.glsl
src/render/: MeshLoader.cpp  RenderSystem.cpp
src/render/vulkan/: Buffer.cpp  DescriptorPoolCache.cpp  Image.cpp  Memory.cpp
src/shaders/: fragment.glsl  vertex.glsl
src/system/: system_unix.cpp  system_windows.cpp
